[package]
name = "coin-comic-tales-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = {  version = "0.18.0" }
bitcoin = "0.32.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
actix-web = "4.4"
actix-cors = "0.7.1"
actix-rt = "2.9"
env_logger = "0.10"
log = "0.4"
hex = "0.4.3"
dashmap = "6.1.0"
